# GuessingGame

./: CMakeCache.txt  CMakeLists.txt  Hangman  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json
CMakeFiles (2)/: CMakeDirectoryInformation.cmake  Makefile.cmake
CMakeFiles (2)/Hangman.dir/: DependInfo.cmake  build.make  compiler_depend.make  link.txt
CMakeFiles (2)/Hangman.dir/src/: Buttons.cpp.o.d  DifficultyScreen.cpp.o.d  File.cpp.o.d  Fonts.cpp.o.d  Health.cpp.o.d  Initialize.cpp.o.d  RetryScreen.cpp.o.d  Screens.cpp.o.d  Start.cpp.o.d  Text.cpp.o.d  UserEvent.cpp.o.d  Word.cpp.o.d  main.cpp.o.d
include/: Box.hpp  Buttons.hpp  Colors.hpp  DifficultyScreen.hpp  Display.hpp  Errors.hpp  Event.hpp  File.hpp  Fonts.hpp  GameScreen.hpp  Health.hpp  Initialize.hpp  Logic.hpp  RetryScreen.hpp  Screen.hpp  Start.hpp  StartScreen.hpp  Text.hpp  Word.hpp
res/: dictionary.txt
src/: Box.cpp  Buttons.cpp  Colors.cpp  DifficultyScreen.cpp  Display.cpp  Errors.cpp  Event.cpp  File.cpp  Fonts.cpp  GameScreen.cpp  Health.cpp  Initialize.cpp  Logic.cpp  RetryScreen.cpp  Screen.cpp  Start.cpp  StartScreen.cpp  Text.cpp  Word.cpp  main.cpp
